# Air-Traffic-Controller

./: .gitignore  README.md
backend/: requirements.txt  run.py
backend/src/: __init__.py  aircraft_generator.py  config.py  flight_simulator.py  scenario_manager.py  scoring_system.py  server.py  websocket_handler.py
cpp-physics/: CMakeLists.txt  build.sh
cpp-physics/src/: bindings.cpp  collision.cpp  collision.h  physics.cpp  physics.h  trajectory.cpp  trajectory.h
docs/: API.md  ARCHITECTURE.md  SETUP.md
frontend/: index.html  package.json
frontend/src/css/: main.css  radar.css  ui.css
frontend/src/js/: audio.js  main.js  radar.js  ui.js  utils.js  websocket.js
rust-safety/: Cargo.toml  build.sh
rust-safety/src/: conflict.rs  lib.rs  separation.rs  state.rs  validation.rs
